<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstName"
        android:layout_margin="10dp"
        android:inputType="text"
        android:id="@+id/fname"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:id="@+id/lname"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_margin="10dp"
        android:inputType="phone"
        android:id="@+id/phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:id="@+id/password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confPass"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:id="@+id/cpassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:layout_gravity="center"
        android:onClick="register"/>

</LinearLayout>